--- a/style.css
+++ b/style.css
@@ -3,18 +3,22 @@ body {
     padding: 0;
     font-family: Arial, sans-serif;
     background-color: #f1f1f1;
+    background-image: url(https://img.freepik.com/free-vector/watercolor-halloween-background_52683-43697.jpg?w=996&t=st=1683032071~exp=1683032671~hmac=b40763c0a7ca8ec5f7ee8640ab4c423e68d52334343e2f7e89242b2fba4dc8d3);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 h1 {
     text-align: center;
-    margin-top: 50px;
-    font-size: 40px;
-    color: #333;
-    text-shadow: 2px 2px #ddd;
+    margin-top: 30px;
+    font-size: 35px;
+    color: #ffffff;
+    /* position: sticky; top: 0; */
 }
 .container {
     width: 80%;
-    margin: 50px auto;
-    background-color: #fff;
+    margin: 40px auto;
+    background-color: #ffffff88;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     padding: 20px;
@@ -31,7 +35,7 @@ textarea {
     border: none;
     border-radius: 5px;
     resize: none;
-    background-color: #f7f7f7;
+    background-color: #f7f7f7c7;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
     color: #333;
