--- a/style.css
+++ b/style.css
@@ -2,23 +2,18 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #f1f1f1;
-    background-image: url(https://cdn.pixabay.com/photo/2019/07/26/17/17/forest-4365198_960_720.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
+    background-color: #1f2a38;;
 }
 h1 {
     text-align: center;
     margin-top: 30px;
     font-size: 35px;
     color: #ffffff;
-    /* position: sticky; top: 0; */
 }
 .container {
     width: 80%;
     margin: 40px auto;
-    background-color: #ffffffb1;
+    background-color: #ffffffc1;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     padding: 20px;
@@ -67,7 +62,7 @@ button:hover {
 }
 .copy-success {
     margin-top: 20px;
-    color: #0095ff;
+    color: #0a4671;
     font-weight: bold;
     text-align: center;
     display: none;
